--- a/FitnessTracker/Data/de.lproj/Localizable.strings
+++ b/FitnessTracker/Data/de.lproj/Localizable.strings
@@ -12,4 +12,4 @@
 
 "addCategory" = "Füge neue KATEGORIE hinzu";
 "achieveRecord" = "Erziele neue BESTLEISTUNG";
-"addEntries %d" = "Erfasse %d neue WERTE";
+"addEntries" = "Erfasse 5 neue WERTE";
