--- a/FitnessTracker/Data/en.lproj/Localizable.strings
+++ b/FitnessTracker/Data/en.lproj/Localizable.strings
@@ -12,4 +12,4 @@
 
 "addCategory" = "Add new CATEGORY";
 "achieveRecord" = "Achieve new PERSONAL BEST";
-"addEntries %d" = "Add %d ENTRIES";
+"addEntries" = "Add 5 ENTRIES";
